--- a/examples/communication-mfe-mfe/svelte-microfrontend/package.json
+++ b/examples/communication-mfe-mfe/svelte-microfrontend/package.json
@@ -23,6 +23,7 @@
     "svelte": "^3.50.1",
     "svelte-navigator": "^3.2.2",
     "vite": "^3.1.4",
+    "vite-plugin-qiankun": "^1.0.15",
     "vite-plugin-svgr": "^2.2.1",
     "vitest": "^0.23.4"
   }
