fix: page config

--- a/examples/communication-mfe-iframe/page-config.json
+++ b/examples/communication-mfe-iframe/page-config.json
@@ -4,7 +4,7 @@
         "type": "element",
         "tag": "div",
         "attributes": {
-            "id":"root"
+            "id":"communication-mfe-iframe-react"
         }
     }, {
         "type": "element",
