--- a/examples/communication-mfe-iframe/react-microfrontend/package.json
+++ b/examples/communication-mfe-iframe/react-microfrontend/package.json
@@ -11,26 +11,28 @@
     "lint": "eslint ./src --ext .js,.jsx"
   },
   "dependencies": {
+    "@orchy-mfe/spa-adapter": "^0.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.1"
+    "react-router-dom": "^6.4.3",
+    "rxjs": "^7.5.7"
   },
   "devDependencies": {
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
-    "@types/react": "^18.0.21",
-    "@types/react-dom": "^18.0.6",
-    "@vitejs/plugin-react": "^2.1.0",
-    "eslint": "^8.24.0",
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.9",
+    "@vitejs/plugin-react": "^2.2.0",
+    "eslint": "^8.27.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.31.8",
-    "happy-dom": "^6.0.4",
-    "rollup-plugin-visualizer": "^5.8.2",
-    "vite": "^3.1.4",
-    "vite-plugin-qiankun": "^1.0.15",
-    "vite-plugin-svgr": "^2.2.1",
-    "vitest": "^0.23.4"
+    "eslint-plugin-react": "^7.31.10",
+    "happy-dom": "^7.7.0",
+    "rollup-plugin-visualizer": "^5.8.3",
+    "vite": "^3.2.4",
+    "vite-plugin-css-injected-by-js": "^2.1.1",
+    "vite-plugin-svgr": "^2.2.2",
+    "vitest": "^0.25.2"
   }
 }
