--- a/examples/routing-mfe/svelte-microfrontend/package.json
+++ b/examples/routing-mfe/svelte-microfrontend/package.json
@@ -11,20 +11,24 @@
     "lint": "eslint ./src --ext .js,.svelte"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^1.0.8",
-    "@testing-library/svelte": "^3.2.1",
-    "eslint": "^8.24.0",
+    "@sveltejs/vite-plugin-svelte": "^1.1.1",
+    "@testing-library/svelte": "^3.2.2",
+    "eslint": "^8.27.0",
     "eslint-config-preact": "^1.3.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-svelte3": "^4.0.0",
-    "jsdom": "^20.0.1",
-    "rollup-plugin-visualizer": "^5.8.2",
-    "svelte": "^3.50.1",
+    "jsdom": "^20.0.2",
+    "rollup-plugin-visualizer": "^5.8.3",
+    "svelte": "^3.53.1",
     "svelte-navigator": "^3.2.2",
-    "vite": "^3.1.4",
-    "vite-plugin-qiankun": "^1.0.15",
-    "vite-plugin-svgr": "^2.2.1",
-    "vitest": "^0.23.4"
+    "vite": "^3.2.4",
+    "vite-plugin-css-injected-by-js": "^2.1.1",
+    "vite-plugin-svgr": "^2.2.2",
+    "vitest": "^0.25.2"
+  },
+  "dependencies": {
+    "@orchy-mfe/spa-adapter": "^0.1.0",
+    "rxjs": "^7.5.7"
   }
 }
