--- a/examples/routing-mfe/orchy-config.json
+++ b/examples/routing-mfe/orchy-config.json
@@ -1,19 +1,7 @@
 {
   "microPages": {
     "/root": {
-      "pageConfiguration": "page-config",
-      "microFrontends": [
-        {
-          "entryPoint": "//localhost:3001",
-          "id": "microfrontend-test-1",
-          "container": "#root"
-        },
-        {
-          "entryPoint": "//localhost:5000",
-          "id": "microfrontend-test-2",
-          "container": "#app"
-        }
-      ]
+      "pageConfiguration": "page-config"
     }
   }
 }
