--- a/examples/mfe-import-maps/orchy-config.json
+++ b/examples/mfe-import-maps/orchy-config.json
@@ -1,7 +1,7 @@
 {
     "microPages": {
       "/": {
-        "pageConfiguration": "page-config"
+        "pageConfiguration": "page-config.json"
       }
     },
     "common": {
