--- a/examples/routing-mfe/orchy-config.json
+++ b/examples/routing-mfe/orchy-config.json
@@ -1,7 +1,7 @@
 {
   "microPages": {
     "/root": {
-      "pageConfiguration": "page-config"
+      "pageConfiguration": "page-config.json"
     }
   }
 }
