--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "example": "examples"
   },
   "scripts": {
-    "pree2e": "cd node_modules/orchy-core && pnpm i",
-    "e2e": "echo e2e"
+    "e2e": "pnpm -r e2e"
   },
   "repository": {
     "type": "git",
