--- a/examples/communication-mfe-iframe/package.json
+++ b/examples/communication-mfe-iframe/package.json
@@ -3,14 +3,16 @@
   "version": "1.0.0",
   "description": "In this example we have the following scenario:",
   "main": "index.js",
-  "dependencies": {
-    "cypress": "^12.0.0"
-  },
   "scripts": {
     "pree2e": "pnpm -r dev",
     "e2e": "echo e2e"
   },
   "keywords": [],
   "author": "Matteo Pietro Dazzi",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@testing-library/cypress": "^8.0.7",
+    "cypress": "^12.0.1",
+    "cypress-iframe": "^1.0.1"
+  }
 }
