--- a/examples/communication-mfe-iframe/package.json
+++ b/examples/communication-mfe-iframe/package.json
@@ -4,8 +4,7 @@
   "description": "In this example we have the following scenario:",
   "main": "index.js",
   "scripts": {
-    "pree2e": "pnpm -r dev",
-    "e2e": "echo e2e"
+    "e2e": "pnpm -r dev & cypress run && kill-port 3001 && kill-port 5000"
   },
   "keywords": [],
   "author": "Matteo Pietro Dazzi",
@@ -13,6 +12,7 @@
   "devDependencies": {
     "@testing-library/cypress": "^8.0.7",
     "cypress": "^12.0.1",
-    "cypress-iframe": "^1.0.1"
+    "cypress-iframe": "^1.0.1",
+    "kill-port-process": "^3.1.0"
   }
 }
