--- a/examples/communication-mfe-mfe/package.json
+++ b/examples/communication-mfe-mfe/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "communication-mfe-iframe",
+  "name": "communication-mfe-mfe",
   "version": "1.0.0",
   "description": "In this example we have the following scenario:",
   "main": "index.js",
@@ -12,7 +12,6 @@
   "devDependencies": {
     "@testing-library/cypress": "^8.0.7",
     "cypress": "^12.0.2",
-    "cypress-iframe": "^1.0.1",
     "kill-port-process": "^3.1.0"
   }
 }
