--- a/examples/routing-mfe/page-config.json
+++ b/examples/routing-mfe/page-config.json
@@ -6,10 +6,10 @@
     "content": [{
         "type": "micro-frontend",
         "tag": "react-routing-mfe",
-        "url": "//localhost:3001/index.js"
+        "url": "//localhost:3001/src/main.jsx"
     }, {
         "type": "micro-frontend",
         "tag": "svelte-routing-mfe",
-        "url": "//localhost:5000/index.js"
+        "url": "//localhost:5000/src/main.js"
     }]
 }
