--- a/examples/communication-mfe-iframe/package.json
+++ b/examples/communication-mfe-iframe/package.json
@@ -4,7 +4,10 @@
   "description": "In this example we have the following scenario:",
   "main": "index.js",
   "scripts": {
-    "e2e": "pnpm -r dev & cypress run && kill-port 3001 && kill-port 5000"
+    "e2e": "pnpm dev & pnpm cypress && pnpm dev:teardown",
+    "dev": "pnpm -r dev",
+    "cypress": "cypress run --browser chrome",
+    "dev:teardown": "kill-port 3001 && kill-port 5000"
   },
   "keywords": [],
   "author": "Matteo Pietro Dazzi",
