--- a/examples/communication-mfe-mfe/package.json
+++ b/examples/communication-mfe-mfe/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "e2e": "pnpm dev & pnpm cypress && pnpm dev:teardown",
     "dev": "pnpm -r dev",
-    "cypress": "cypress run",
+    "cypress": "cypress run && cypress run --browser chrome && cypress run --browser edge && cypress run --browser firefox && cypress run --browser webkit",
     "dev:teardown": "kill-port 3001 && kill-port 5000"
   },
   "keywords": [],
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@testing-library/cypress": "^8.0.7",
     "cypress": "^12.0.2",
-    "kill-port-process": "^3.1.0"
+    "kill-port-process": "^3.1.0",
+    "playwright-webkit": "^1.28.1"
   }
 }
