--- a/examples/routing-mfe/package.json
+++ b/examples/routing-mfe/package.json
@@ -16,6 +16,7 @@
     "@testing-library/cypress": "^8.0.7",
     "cypress": "^12.0.2",
     "cypress-iframe": "^1.0.1",
-    "kill-port-process": "^3.1.0"
+    "kill-port-process": "^3.1.0",
+    "playwright-webkit": "^1.28.1"
   }
 }
