--- a/examples/communication-mfe-iframe/package.json
+++ b/examples/communication-mfe-iframe/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "e2e": "pnpm dev & pnpm cypress && pnpm dev:teardown",
-    "dev": "pnpm -r dev",
+    "dev": "pnpm -r --workspace-concurrency 2 dev",
     "cypress": "cypress run && cypress run --browser chrome && cypress run --browser edge",
     "dev:teardown": "kill-port 3001 && kill-port 5000"
   },
