--- a/examples/routing-mfe/package.json
+++ b/examples/routing-mfe/package.json
@@ -5,7 +5,7 @@
   "main": "cypress.config.js",
   "scripts": {
     "e2e": "pnpm dev & pnpm cypress && pnpm dev:teardown",
-    "dev": "pnpm -r dev",
+    "dev": "pnpm -r --workspace-concurrency 2 dev",
     "cypress": "cypress run",
     "dev:teardown": "kill-port 3001 && kill-port 5000"
   },
