--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -24,6 +24,5 @@ jobs:
         with:
           version: latest
       - run: pnpm install --frozen-lockfile
-      - run: npx playwright install
-      - run: npx playwright install-deps
+      - run: npx playwright install --with-deps
       - run: pnpm e2e
