--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -23,6 +23,6 @@ jobs:
       - uses: pnpm/action-setup@v2.2.4
         with:
           version: latest
-      - run: pnpm install --frozen-lockfile
+      - run: pnpm install
       - run: npx playwright install --with-deps
       - run: pnpm e2e
