--- a/examples/communication-mfe-iframe/package.json
+++ b/examples/communication-mfe-iframe/package.json
@@ -4,7 +4,8 @@
   "description": "In this example we have the following scenario:",
   "main": "index.js",
   "scripts": {
-    "e2e": "pnpm dev & pnpm cypress && pnpm dev:teardown",
+    "e2e": "pnpm dev & pnpm dev:wait-boot && pnpm cypress && pnpm dev:teardown",
+    "dev:wait-boot": "wait-port 3001 && wait-port 5000",
     "dev": "pnpm -r --workspace-concurrency 2 dev",
     "cypress": "cypress run && cypress run --browser chrome && cypress run --browser edge",
     "dev:teardown": "kill-port 3001 && kill-port 5000"
@@ -16,6 +17,7 @@
     "@testing-library/cypress": "^8.0.7",
     "cypress": "^12.0.2",
     "cypress-iframe": "^1.0.1",
-    "kill-port-process": "^3.1.0"
+    "kill-port-process": "^3.1.0",
+    "wait-port": "^1.0.4"
   }
 }
