--- a/examples/mfe-import-maps/package.json
+++ b/examples/mfe-import-maps/package.json
@@ -4,7 +4,8 @@
   "description": "In this example we have the following scenario:",
   "main": "cypress.config.js",
   "scripts": {
-    "e2e": "pnpm dev & pnpm cypress && pnpm dev:teardown",
+    "e2e": "pnpm dev & pnpm dev:wait-boot && pnpm cypress && pnpm dev:teardown",
+    "dev:wait-boot": "wait-port 3001",
     "dev": "pnpm -r dev",
     "cypress": "cypress run",
     "dev:teardown": "kill-port 3001"
@@ -16,6 +17,7 @@
     "@testing-library/cypress": "^8.0.7",
     "cypress": "^12.0.2",
     "kill-port-process": "^3.1.0",
-    "playwright-webkit": "^1.28.1"
+    "playwright-webkit": "^1.28.1",
+    "wait-port": "^1.0.4"
   }
 }
