--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "prepare": "cd ./node_modules/orchy-core && pnpm i &",
-    "pree2e": "cd ./node_modules/orchy-core && pnpm w:wc dev &",
+    "pree2e": "cd ./node_modules/orchy-core && pnpm w:wc dev & wait-port 5173",
     "e2e": "pnpm -r --workspace-concurrency 1 e2e",
     "poste2e": "kill-port 5173"
   },
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/orchy-mfe/orchy-examples#readme",
   "devDependencies": {
     "kill-port-process": "^3.1.0",
-    "orchy-core": "github:orchy-mfe/orchy-core"
+    "orchy-core": "github:orchy-mfe/orchy-core",
+    "wait-port": "^1.0.4"
   }
 }
