chore: build command

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "prepare": "cd ./node_modules/orchy-core && pnpm i &",
     "pree2e": "cd ./node_modules/orchy-core && pnpm w:wc dev & wait-port 5173",
     "e2e": "pnpm -r --workspace-concurrency 1 e2e",
-    "poste2e": "kill-port 5173"
+    "poste2e": "kill-port 5173",
+    "build": "pnpm -r build"
   },
   "repository": {
     "type": "git",
