--- a/examples/routing-mfe/react-microfrontend/.eslintrc
+++ b/examples/routing-mfe/react-microfrontend/.eslintrc
@@ -30,6 +30,7 @@
     "react/no-unused-prop-types": 2,
     "react/sort-prop-types": 2,
     "react/jsx-filename-extension": 2,
+    "react/prop-types": 0,
     "quote-props": [
       "error",
       "as-needed"
