--- a/examples/communication-parent-children/page-config-parent.json
+++ b/examples/communication-parent-children/page-config-parent.json
@@ -1,14 +1,24 @@
 {
     "type": "flex-column",
-    "content": [{
-        "type": "micro-frontend",
-        "tag": "communication-mfe-mfe-react",
-        "url": "//localhost:3001/src/main.jsx"
-    }, {
-        "type": "element",
-        "tag": "orchy-wc",
-        "attributes": {
-            "configurationName": "orchy-config-children.json"
+    "content": [
+        {
+            "type": "element",
+            "tag": "span",
+            "attributes": {
+                "innerHTML": "Parent"
+            }
+        },
+        {
+            "type": "micro-frontend",
+            "tag": "communication-mfe-mfe-react",
+            "url": "//localhost:3001/src/main.jsx"
+        },
+        {
+            "type": "element",
+            "tag": "orchy-wc",
+            "attributes": {
+                "configurationName": "orchy-config-children.json"
+            }
         }
-    }]
+    ]
 }
