--- a/examples/communication-parent-children/page-config-children.json
+++ b/examples/communication-parent-children/page-config-children.json
@@ -1,6 +1,16 @@
 {
     "type": "flex-row",
+    "attributes": {
+        "style": "border: 1px solid red"
+    },
     "content": [
+        {
+            "type": "element",
+            "tag": "span",
+            "attributes": {
+                "innerHTML": "Children"
+            }
+        },
         {
             "type": "micro-frontend",
             "tag": "communication-mfe-mfe-svelte",
