--- a/examples/communication-parent-children/page-config-children.json
+++ b/examples/communication-parent-children/page-config-children.json
@@ -7,7 +7,7 @@
         {
             "type": "element",
             "tag": "span",
-            "attributes": {
+            "properties": {
                 "innerHTML": "Children"
             }
         },
