--- a/examples/communication-parent-children/page-config-parent.json
+++ b/examples/communication-parent-children/page-config-parent.json
@@ -4,7 +4,7 @@
         {
             "type": "element",
             "tag": "span",
-            "attributes": {
+            "properties": {
                 "innerHTML": "Parent"
             }
         },
