--- a/examples/storage/package.json
+++ b/examples/storage/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "e2e": "start-test 'dev' '3001' 'cypress'",
     "dev": "pnpm -r --workspace-concurrency 1 dev",
-    "cypress": "cypress run"
+    "cypress": "cypress run && cypress run --browser chrome && cypress run --browser edge && cypress run --browser firefox && cypress run --browser webkit"
   },
   "keywords": [],
   "author": "Matteo Pietro Dazzi",
@@ -15,6 +15,6 @@
     "@testing-library/cypress": "^9.0.0",
     "cypress": "^12.3.0",
     "playwright-webkit": "^1.29.2",
-    "start-server-and-test": "^1.15.3"
+    "start-server-and-test": "^1.15.4"
   }
 }
