--- a/examples/all-templates/package.json
+++ b/examples/all-templates/package.json
@@ -4,11 +4,11 @@
   "description": "In this example we configure all the templates in a single page",
   "main": "cypress.config.js",
   "scripts": {
-    "e2e": "pnpm dev & pnpm dev:wait-boot && pnpm cypress && pnpm dev:teardown",
-    "dev:wait-boot": "wait-port 4200 && wait-port 3001 && wait-port 3000 && wait-port 3002 && wait-port 5000 && wait-port 8080 && wait-port 8081",
+    "e2e": "pnpm dev & pnpm cypress",
+    "precypress": "wait-port 4200 && wait-port 3001 && wait-port 3000 && wait-port 3002 && wait-port 5000 && wait-port 8080 && wait-port 8081",
     "dev": "pnpm -r --workspace-concurrency 7 dev",
     "cypress": "cypress run",
-    "dev:teardown": "kill-port 4200 && kill-port 3001 && kill-port 3000 && kill-port 3002 && kill-port 5000 && kill-port 8080 && kill-port 8081"
+    "postcypress": "kill-port 4200 && kill-port 3001 && kill-port 3000 && kill-port 3002 && kill-port 5000 && kill-port 8080 && kill-port 8081"
   },
   "keywords": [],
   "author": "Matteo Pietro Dazzi",
