--- a/examples/routing-mfe/package.json
+++ b/examples/routing-mfe/package.json
@@ -7,7 +7,7 @@
     "e2e": "pnpm dev & pnpm cypress",
     "precypress": "wait-port 3001 && wait-port 5000",
     "dev": "pnpm -r --workspace-concurrency 2 dev",
-    "cypress": "cypress run",
+    "cypress": "cypress run && cypress run --browser chrome && cypress run --browser edge && cypress run --browser firefox && cypress run --browser webkit",
     "postcypress": "kill-port 3001 && kill-port 5000"
   },
   "keywords": [],
