--- a/examples/all-templates/package.json
+++ b/examples/all-templates/package.json
@@ -4,7 +4,7 @@
   "description": "In this example we configure all the templates in a single page",
   "main": "cypress.config.js",
   "scripts": {
-    "e2e": "start-test 'dev' '4200|3001|3000|3002|5000|8080|8081' 'cypress'",
+    "e2e": "start-test 'dev' 'localhost:4200|localhost:3001|localhost:3000|localhost:3002|localhost:5000|localhost:8080|localhost:8081' 'cypress'",
     "dev": "pnpm -r --workspace-concurrency 7 dev",
     "cypress": "cypress run"
   },
@@ -15,6 +15,6 @@
     "@testing-library/cypress": "^9.0.0",
     "cypress": "^12.3.0",
     "playwright-webkit": "^1.29.2",
-    "start-server-and-test": "^1.15.3"
+    "start-server-and-test": "^2.0.0"
   }
 }
