--- a/examples/storage/package.json
+++ b/examples/storage/package.json
@@ -4,7 +4,7 @@
   "description": "In this example we configure the storage plugin",
   "main": "cypress.config.js",
   "scripts": {
-    "e2e": "start-test 'dev' '3001' 'cypress'",
+    "e2e": "start-test 'dev' 'localhost:3001' 'cypress'",
     "dev": "pnpm -r --workspace-concurrency 1 dev",
     "cypress": "cypress run"
   },
@@ -15,6 +15,6 @@
     "@testing-library/cypress": "^9.0.0",
     "cypress": "^12.3.0",
     "playwright-webkit": "^1.29.2",
-    "start-server-and-test": "^1.15.3"
+    "start-server-and-test": "^2.0.0"
   }
 }
